--- a/buscaminas.css
+++ b/buscaminas.css
@@ -20,7 +20,8 @@ html {
 .cell {
     background-color: lightseagreen;
     width: 50px;
-    height: 50px
+    height: 50px;
+    font-size: 30px;
 }
 
 .cell:hover {
