--- a/buscaminas.css
+++ b/buscaminas.css
@@ -18,9 +18,9 @@ html {
 
 .cell {
     background-color: lightseagreen;
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
+    width: 40px;
+    height: 40px;
+    font-size: 25px;
 }
 
 .cell:hover {
@@ -34,18 +34,18 @@ html {
 
 .flag {
     background-image: url(images/flag.png);
-    background-size: 40px;
+    background-size: 30px;
     background-repeat: no-repeat;
-    background-position-x: 5px;
+    background-position-x: 6px;
     background-position-y: 5px;
 }
 
 .bomb {
     background-image: url(images/bomb.png);
-    background-size: 40px;
+    background-size: 30px;
     background-repeat: no-repeat;
-    background-position-x: 5px;
-    background-position-y: 6px;
+    background-position-x: 4px;
+    background-position-y: 7px;
 }
 
 #result {
@@ -55,7 +55,7 @@ html {
     border-end-start-radius: 10px;
     border-end-end-radius: 10px;
     display: grid;
-    grid-template-columns: 250px 250px;
+    grid-template-columns: 200px 200px;
     grid-template-rows: 50px;
     justify-items: end;
 }
@@ -92,14 +92,12 @@ html {
 #timer {
     display: flex;
     justify-self: center;
-    margin-right: 200px;
     align-self: center;
+    margin-right: 200px;
     width: 100px;
 }
 
-#seconds {
-    /* margin-bottom: 20px; */
-    align-self: center;
+#seconds {  
     font-size: 24px;
     font-weight: bolder;
 }
@@ -107,22 +105,22 @@ html {
 #flagsDiv {
     display: flex;
     align-self: center;  
-    width: 100px;  
+    width: 100px;
+    margin-right: -15px;
 }
 
 #flags {
     margin-right: 4px;
     margin-top: 13px;
-    width: 40px;
-    height: 45px;
-    /* margin-right: 40px;
-    margin-top: 5px; */
+    width: 35px;
+    height: 40px;
 }
 
 #clock {
-    margin-top: 5px;
-    width: 55px;
-    height: 55px;
+    margin-top: 11px;
+    width: 45px;
+    height: 45px;
+    margin-left: 25px;
 }
 
 .show {
